# CMakeList.txt : CMake project for SwarmMission, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (SwarmMission "SwarmMission.cpp" "SwarmMission.h")

# TODO: Add tests and install targets if needed.
